<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RemindMeNow</string>
    <string name="name"> Name</string>
    <string name="age"> Age</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="submit">Submit</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="btnLogin">Login</string>
    <string name="link_to_register">Register</string>
    <string name="title_activity_list_view">ListView</string>
    <string name="task">Task</string>
    <string name="add">Add</string>
    <string name="def">Choose Type</string>

    <string-array name="itemdomain">
        <item>Atm</item>
        <item>Bank</item>
        <item>Bar</item>
        <item>Beauty</item>
        <item>Book</item>
        <item>Clothes</item>
        <item>Food</item>
        <item>Grocery</item>
        <item>Jewelry</item>
        <item>Pharmacy</item>
    </string-array>

    <string name="title_activity_test">TestActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>