<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout
      	android:background="#007FFF"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
 
        <!--  Header Starts-->
        <!--  Header Ends -->
 
        <!-- Footer Start -->
                   <!-- Place footer next to header to set z-index property to minus value -->
        <!-- Footer Ends -->
 
        <!-- Login Form -->
        <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:padding="10dip">
        <!--  Name Label -->  

        <TextView
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="#372c24"
            android:textSize="20sp" />

        <EditText 
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"/>
       <!--  Email Label -->
        <TextView 
            	android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#372c24"
                android:textSize="20sp"
                android:text="@string/email"/>
        <EditText 
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"/>
        <!-- Age -->
        <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#372c24"
                android:text="@string/age"/>
        <EditText 
                android:id = "@+id/age"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:singleLine="true"/>
        <!--  Gender -->
        <TextView
        android:id="@+id/genderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:layout_marginTop="19dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/gender" />
        <RadioGroup 
                android:id="@+id/gender"
         		android:layout_width="fill_parent"
    	 		android:layout_height="wrap_content"
    	 		android:orientation="vertical">   
         		<RadioButton
         				android:id="@+id/femaleRadio"
         				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:gravity="center"
        				android:text="@string/female"    
         		    />
         		<RadioButton
         				android:id="@+id/maleRadio"
         				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:gravity="center"
        				android:text="@string/male"    
         		    />
        </RadioGroup>
        <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />
        </LinearLayout>
        <!-- Login Form Ends -->
 
  </RelativeLayout>
</ScrollView>